Primera versión presentada
Primer versión del sistema, funciones: agregar y eliminar, falta actualizar.
La base de datos funciona correctamente todo bien

--- a/SistemaPrestamos/SistemaPrestamos.csproj
+++ b/SistemaPrestamos/SistemaPrestamos.csproj
@@ -67,6 +67,9 @@
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="Tulpep.NotificationWindow">
+      <HintPath>..\packages\Tulpep.NotificationWindow.1.1.23\lib\net40\Tulpep.NotificationWindow.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DBconexion.cs" />
