--- a/SistemaPrestamos/packages.config
+++ b/SistemaPrestamos/packages.config
@@ -8,4 +8,5 @@
   <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net40" />
   <package id="System.Data.SQLite.EF6" version="1.0.105.2" targetFramework="net40" />
   <package id="System.Data.SQLite.Linq" version="1.0.105.2" targetFramework="net40" />
+  <package id="Tulpep.NotificationWindow" version="1.1.23" targetFramework="net40" />
 </packages>
